--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,30 @@ body {
   font-family: "Nunito", sans-serif;
   color: #6d5d4b;
   font-weight: 300; }
+
+.sidebar {
+  background-color: #c69963; }
+
+.header {
+  background-color: #54483a; }
+
+.realtors {
+  background-color: #101d2c; }
+
+.features {
+  background-color: #aaa; }
+
+.story__pictures {
+  background-color: #c69963; }
+
+.story__content {
+  background-color: #f9f7f6; }
+
+.homes {
+  background-color: #101d2c; }
+
+.gallery {
+  background-color: #54483a; }
+
+.footer {
+  background-color: #101d2c; }
