--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
   color: #6d5d4b;
   font-weight: 300; }
 
+.container {
+  display: grid;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content); }
+
 .sidebar {
   background-color: #c69963; }
 
