--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -46,6 +46,7 @@
   padding: 1.8rem 3rem;
   cursor: pointer;
   transition: all 300ms;
+  outline: none;
 
   &:hover {
     background-color: $color-primary-dark;
