--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,27 @@ body {
 .sidebar {
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
-  grid-row: 1 / -1; }
+  grid-row: 1 / -1;
+  display: flex;
+  justify-content: center; }
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  margin-top: 4rem;
+  background-color: #ffffff;
+  height: 2px;
+  width: 4.5rem; }
+  .nav-btn::before, .nav-btn::after {
+    content: "";
+    display: block;
+    background-color: #ffffff;
+    height: 2px;
+    width: 4.5rem; }
+  .nav-btn::before {
+    transform: translateY(-1.7rem); }
+  .nav-btn::after {
+    transform: translateY(1.5rem); }
 
 .header {
   background-color: #54483a;
@@ -278,6 +298,7 @@ body {
     display: block;
     transition: all 0.2s; }
   .nav__link:hover, .nav__link:active {
+    border-radius: 3px;
     background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-3px); }
 
