--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -26,6 +26,7 @@
 
   &__link:hover,
   &__link:active {
+    border-radius: 3px;
     background-color: rgba(#fff, 0.05);
     transform: translateY(-3px);
   }
