--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,4 +2,32 @@
   background-color: $color-primary;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+  margin-top: 4rem;
+  background-color: #ffffff;
+  height: 2px;
+  width: 4.5rem;
+
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+    background-color: #ffffff;
+    height: 2px;
+    width: 4.5rem;
+  }
+
+  &::before {
+    transform: translateY(-1.7rem);
+  }
+
+  &::after {
+    transform: translateY(1.5rem);
+  }
 }
