add new breakpoints

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,8 @@ $font-display: "Josefin Sans", sans-serif;
 
 $bp-largest: 75rem; //1200px
 $bp-large: 62.5rem; //1000px
+$bp-medium: 50rem; //800px
+$bp-small: 25rem; //400px
 
 *,
 *::after,
