--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -12,6 +12,12 @@
         rgba($color-primary, 0.5)
       ),
       url(../img/back.jpg) no-repeat center;
+    background-size: cover;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -19,6 +25,11 @@
     grid-column: 2 / 6;
     grid-row: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
   &__img--2 {
     width: 115%;
@@ -26,6 +37,11 @@
     grid-row: 4 / 6;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
   &__content {
     background-color: $color-grey-light-1;
@@ -35,6 +51,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
   &__text {
     font-size: 1.5rem;
