--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -22,6 +22,10 @@
     @media only screen and (max-width: $bp-medium) {
       grid-template-columns: repeat(3, min-content max-content);
     }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
   }
   &__img {
     width: 7rem;
